[tool.poetry]
name = "hf-ws-misc"
version = "0.1.0"
description = ""
authors = ["fortisai <0xfortisai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.54.4"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
